--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 spring.application.name=InventoryApplication
 #spring.datasource.url=jdbc:mysql://localhost:3306/inventory_app_db?useSSL=false&serverTimezone=UTC
-spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_app_db
 
-spring.datasource.username=manager
-spring.datasource.password=manager
+#LOCAL
+#spring.datasource.url=jdbc:postgresql://localhost:5432/inventory_app_db
+#
+#spring.datasource.username=manager
+#spring.datasource.password=manager
+
+#PRODUCTION
+spring.datasource.url=${DB_URL}
+#
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
