--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.datasource.url=${DB_URL}
 #
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+server.port=${DB_PORT}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
