--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,15 @@ spring.datasource.url=${DB_URL}
 #
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-server.port=${DB_PORT}
+server.port=${SERVER_PORT}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.jpa.properties.hibernate.format_sql=true
+
+# For Postgres, schema initialization via data.sql will run after Hibernate if using spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=true
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
