--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.url=${DB_URL}
 #
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
-server.port=${SERVER_PORT}
+server.port=${SERVER_PORT:8080}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
