--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,12 +29,14 @@ springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
 
 # Mail Configuration (use valid SMTP credentials)
-spring.mail.host=smtp.example.com
+spring.mail.host=smtp-relay.brevo.com
 spring.mail.port=587
-spring.mail.username=nazarbekovnavruz@gmail.com
-spring.mail.password=avcj fiuq xftz gyyl
+spring.mail.username=816ff1001@smtp-brevo.com
+spring.mail.password=T10DOy3ChUvRb5jE
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.default-encoding=UTF-8
 
 # Recipient email for low-stock notifications
 notification.email.recipient=sayedzamonuddin.adeem@gmail.com
